--- a/hdiv-spring-mvc-3.0.4/pom.xml
+++ b/hdiv-spring-mvc-3.0.4/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>hdiv</artifactId>
 		<groupId>org.hdiv</groupId>
-		<version>2.1.0.RC1</version>
+		<version>2.1.0.RC2-SNAPSHOT</version>
 	</parent>
 	<artifactId>hdiv-spring-mvc-3.0.4</artifactId>
 	<name>HDIV spring 3.0.4</name>
