--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<artifactId>hdiv</artifactId>
 	<packaging>pom</packaging>
 	<name>HDIV</name>
-	<version>2.1.0.RC1</version>
+	<version>2.1.0.RC2-SNAPSHOT</version>
 	<url>http://www.hdiv.org</url>	
 	<description>Java Web Application Security Framework</description>
 	
